--- a/02-redux-app/src/app/app.component.html
+++ b/02-redux-app/src/app/app.component.html
@@ -17,6 +17,6 @@
 
 <div class="row text-center">
   <div class="col">
-    <app-hijo [contador]="contador" (cambioContador)="contador = $event" ></app-hijo>
+    <app-hijo></app-hijo>
   </div>
 </div>
