--- a/03-todoapp/src/app/todo/todo-footer/todo-footer.component.html
+++ b/03-todoapp/src/app/todo/todo-footer/todo-footer.component.html
@@ -1,18 +1,14 @@
 <footer class="footer">
   <!-- This should be `0 items left` by default -->
-  <span class="todo-count"><strong>0</strong> item left</span>
+  <span class="todo-count"><strong>{{ pendientes }}</strong> pendientes</span>
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
-    <li>
-      <a class="selected" href="#/">All</a>
-    </li>
-    <li>
-      <a href="#/active">Active</a>
-    </li>
-    <li>
-      <a href="#/completed">Completed</a>
+    <li
+      *ngFor="let filtro of filtrosValidos"
+      (click)="cambiarFiltro(filtro)" >
+      <a [ngClass]="{ 'selected': filtro === filtroActual }" >{{ filtro }}</a>
     </li>
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
-  <button class="clear-completed">Clear completed</button>
+  <button (click)="borrarTodo()"  class="clear-completed">Clear completed</button>
 </footer>
