--- a/demo-app/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/demo-app/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -38,18 +38,14 @@
               </div>
 
               <hr>
-              <button type="submit" class="btn btn-success mr-2" [disabled]="form.invalid">
+              <button *ngIf="!cargando" type="submit" class="btn btn-success mr-2" [disabled]="form.invalid">
                 <i class="fa fa-save"></i>
                 Agregar
               </button>
-
-              <!-- 
-                <button disabled class="btn btn-success mr-2">
-                  <i class="fa fa-spin fa-sync"></i>
-                  Espere por favor...
-                </button> 
-              -->
-              
+              <button *ngIf="cargando" disabled class="btn btn-success mr-2">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere por favor...
+              </button> 
               <button type="reset" class="btn btn-light">Cancelar</button>
 
             </form>
